// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalFormAdminPageTabs /> doesnt render a (new)  analysis tab, if form is not linked to a step yet 1`] = `
<div>
  <p>
    <strong>
      <FormattedMessage
        id="permalink"
        values={Object {}}
      />
       :
    </strong>
     
    <a
      href="http://capco.dev/top-budget"
    >
      http://capco.dev/top-budget
    </a>
     |
     
    <b>
      global.ref
       : 
    </b>
     
    2
  </p>
  <Uncontrolled(Tabs)
    defaultActiveKey="CONFIGURATION"
    id="proposal-form-admin-page-tabs"
  >
    <Tab
      eventKey="CONFIGURATION"
      title="global.configuration"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": null,
            "url": "http://capco.dev/top-budget",
          }
        }
        query={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
          }
        }
      />
    </Tab>
    <Tab
      eventKey="LEGACY_ANALYSIS"
      title="proposal.tabs.evaluation"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": null,
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
    <Tab
      eventKey="NOTIFICATIONS"
      title="proposal_form.admin.notification"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": null,
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
    <Tab
      eventKey="SETTINGS"
      title="global.params"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": null,
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
  </Uncontrolled(Tabs)>
</div>
`;

exports[`<ProposalFormAdminPageTabs /> doesnt render a (new) analysis tab, if feature is not enabled 1`] = `
<div>
  <p>
    <strong>
      <FormattedMessage
        id="permalink"
        values={Object {}}
      />
       :
    </strong>
     
    <a
      href="http://capco.dev/top-budget"
    >
      http://capco.dev/top-budget
    </a>
     |
     
    <b>
      global.ref
       : 
    </b>
     
    2
  </p>
  <Uncontrolled(Tabs)
    defaultActiveKey="CONFIGURATION"
    id="proposal-form-admin-page-tabs"
  >
    <Tab
      eventKey="CONFIGURATION"
      title="global.configuration"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": Object {
              "id": "<random id>",
            },
            "url": "http://capco.dev/top-budget",
          }
        }
        query={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
          }
        }
      />
    </Tab>
    <Tab
      eventKey="LEGACY_ANALYSIS"
      title="proposal.tabs.evaluation"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": Object {
              "id": "<random id>",
            },
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
    <Tab
      eventKey="NOTIFICATIONS"
      title="proposal_form.admin.notification"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": Object {
              "id": "<random id>",
            },
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
    <Tab
      eventKey="SETTINGS"
      title="global.params"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": Object {
              "id": "<random id>",
            },
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
  </Uncontrolled(Tabs)>
</div>
`;

exports[`<ProposalFormAdminPageTabs /> render a (new) analysis tab 1`] = `
<div>
  <p>
    <strong>
      <FormattedMessage
        id="permalink"
        values={Object {}}
      />
       :
    </strong>
     
    <a
      href="http://capco.dev/top-budget"
    >
      http://capco.dev/top-budget
    </a>
     |
     
    <b>
      global.ref
       : 
    </b>
     
    2
  </p>
  <Uncontrolled(Tabs)
    defaultActiveKey="CONFIGURATION"
    id="proposal-form-admin-page-tabs"
  >
    <Tab
      eventKey="CONFIGURATION"
      title="global.configuration"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": Object {
              "id": "<random id>",
            },
            "url": "http://capco.dev/top-budget",
          }
        }
        query={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
          }
        }
      />
    </Tab>
    <Tab
      eventKey="LEGACY_ANALYSIS"
      title="proposal.tabs.evaluation"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": Object {
              "id": "<random id>",
            },
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
    <Tab
      eventKey="NEW_ANALYSIS"
      title={
        <React.Fragment>
          <FormattedMessage
            id="proposal.tabs.evaluation"
            values={Object {}}
          />
          <span
            className="ml-5"
          >
            <Badge
              bsClass="badge"
              pill={true}
              pullRight={false}
              variant="primary"
            >
              <FormattedMessage
                id="badge.new"
                values={Object {}}
              />
            </Badge>
          </span>
        </React.Fragment>
      }
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": Object {
              "id": "<random id>",
            },
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
    <Tab
      eventKey="NOTIFICATIONS"
      title="proposal_form.admin.notification"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": Object {
              "id": "<random id>",
            },
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
    <Tab
      eventKey="SETTINGS"
      title="global.params"
    >
      <Relay(injectIntl(Connect(ReduxForm)))
        proposalForm={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "reference": "2",
            "step": Object {
              "id": "<random id>",
            },
            "url": "http://capco.dev/top-budget",
          }
        }
      />
    </Tab>
  </Uncontrolled(Tabs)>
</div>
`;
